@@ -1,5 +1,10 @@
 2004-12-21  Davyd Madeley  <davyd@madeley.id.au>
 
+	* weather-metar.c: Revert to a non-chained, more flexible METAR
+	parser. Work by Frank Solensky.
+
+2004-12-21  Davyd Madeley  <davyd@madeley.id.au>
+
 	* Locations.xml.in: File encoding glitches had broken special
 	characters for Germany and France, fixed them up. There may be others.
 
